--- a/About us.html
+++ b/About us.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <h1>About Us</h1>
-      <img src="/Img/Logo.png" height="288px" width="432px" alt="logo">
+      <img src="/Logo.png" height="288px" width="432px" alt="logo">
       <br>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iusto cum dignissimos vitae eaque iure quisquam, modi molestias nulla fugiat sint in, non ea, itaque at consequatur odit? Recusandae, hic?</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eaque, libero ea minus nulla labore amet dicta quidem nostrum voluptatibus cupiditate ipsum commodi! Officia, tenetur numquam. Dicta numquam at tempore!</p>
